@startuml NoteOrganisationCommands
skinparam classAttributeIconSize 0
hide circle
abstract class Command {
    + {abstract} execute(notes : ArrayList<Note>, tags : List<String>, ui : UI, storage : Storage) : void
    + isExit() : boolean
}

class FindNoteByBodyCommand
class FindNoteByTitleCommand
class ListNoteCommand
class PinNoteCommand

' Inheritance
FindNoteByBodyCommand -down-|> Command
FindNoteByTitleCommand -down-|> Command
PinNoteCommand -up-|> Command
ListNoteCommand -up-|> Command
@enduml